--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ trigger:
       - feature/*
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: Default
 
 variables:
   MAVEN_OPTS: "-Dmaven.test.failure.ignore=false"
